--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -4,7 +4,7 @@ build:
   version: "2.0"
 
 accounts:
-  message: "Welcome to EazyBank Loan related Quality Assurance APIs"
+  message: "Welcome to EazyBank Loan related QA APIs"
   contactDetails:
     name: "Smitha Ray- QA Lead"
     email: "smitha@eazybank.com"
