--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -4,7 +4,7 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank card related prod APIs"
+  message: "Welcome to EazyBank card related webhook prod APIs"
   contactDetails:
     name: "Reine Aishwarya- Product Owner"
     email: "aishwararya@eazybank.com"
