--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -4,10 +4,11 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank card related webhook APIs"
+  message: "Welcome to EazyBank card related webhook testing APIs"
   contactDetails:
     name: "Reine Aishwarya- Product Owner"
     email: "aishwararya@eazybank.com"
   onCallSupport:
     - (453) 392-4829
     - (236) 203-0384
+
